@@ -7,6 +7,8 @@ What's new in version 1.0.1
 * Safer behavior on the kill screen, to make it harder to kill the wrong process.
 * Fix for building in FreeBSD 8.2
   (thanks to Trond Endrestol)
+* BUGFIX: behavior of 'F' (follow) key was broken, also affecting the
+  persistence of mouse selections.
 * BUGFIX: keep main panel up-to-date when running the screen manager,
   to fix crash when processes die while on the F9/Kill screen.
 
